--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,20 @@
-body {
-  background-color: black;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-header {
-  color: white;
+.content-wrapper {
+  margin-top: 60px;
+  min-height: calc(100vh - 60px);
+  display: flex;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
