--- a/src/Course/Course.module.scss
+++ b/src/Course/Course.module.scss
@@ -1,10 +1,25 @@
 .course-card {
-  margin-top: 20px;
-  padding: 15px 0;
+  padding: 15px 25px;
   display: flex;
-  flex-direction: column;
-  background-color: #ddd;
-  border-radius: 5px;
+  justify-content: start;
+  align-items: center;
+  background-color: white;
+  border-radius: 1px;
+  cursor: pointer;
+  transition: 0.3s;
+
+  &:hover {
+    background-color: rgba(245, 245, 245, 0.411);
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    margin: 0 20px;
+    flex-grow: 1;
+  }
 
   &__title {
     text-align: center;
@@ -12,12 +27,12 @@
   }
 
   &__image {
-    width: 100%;
+    width: 25%;
     height: auto;
   }
 
   &__price,
   &__authors {
-    margin: 10px 0 0 15px;
+    margin: 15px 0 0 15px;
   }
 }
