--- a/src/components/AsideMenu/AsideMenu.module.scss
+++ b/src/components/AsideMenu/AsideMenu.module.scss
@@ -1,16 +1,21 @@
+@import "../../mixins";
+
 .aside-menu {
   padding: 15px;
   width: 200px;
-  background-color: #ddd;
+  background-color: white;
   position: relative;
 
   &__nav-wrapper {
     position: sticky;
-    top: 80px;
+    top: 12vh;
   }
 
   &__title {
-    margin-top: 20px;
+    font-size: 15px;
+    font-style: italic;
+    font-weight: bold;
+    margin: 20px 0;
   }
 
   &__link {
@@ -18,10 +23,7 @@
     padding: 3px 5px;
     color: #000;
     text-align: center;
-    background-color: lightsalmon;
     cursor: pointer;
-    &:hover {
-      background-color: red;
-    }
+    @include default-button(13px);
   }
 }
