--- a/src/components/Courses/Courses.module.scss
+++ b/src/components/Courses/Courses.module.scss
@@ -3,16 +3,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: start;
 
   &__title {
     text-align: center;
-    margin-top: 20px;
+    margin: 20px;
+    font-size: 30px;
+    text-decoration: underline;
   }
 
   &__list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 25px;
   }
 }
