--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -5,7 +5,8 @@
   padding: 15px;
   transform: translate(-50%, -50%);
   z-index: 100;
-
+  border: none;
+  border-radius: 3px;
   &::backdrop {
     backdrop-filter: blur(2px);
   }
