--- a/src/components/UserCourses/UserCourses.module.scss
+++ b/src/components/UserCourses/UserCourses.module.scss
@@ -2,15 +2,19 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: start;
 
   &__title {
     text-align: center;
-    margin-bottom: 20px;
+    margin: 20px;
+    font-size: 30px;
+    text-decoration: underline;
   }
 
   &__list {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap:25px;
-}
+    grid-template-columns: repeat(1, 1fr);
+    gap: 25px;
+  }
 }
